# NextEventSimulator

./: .clangd  .gitignore  CMakeLists.txt  README.md  build.py  conanfile.py  conanfile.py.old  conanfile.txt  pack.sh  simulation.txt  simulator.code-workspace  vcpkg.json
.conan/: gccx64.conf  gccx86.conf
CpuSimulator/: CMakeLists.txt
CpuSimulator/doc/: Analysis.ipynb  Markov.ipynb  Report.tex  requirements.txt
CpuSimulator/doc/markov/src/: generator.rs  main.rs  mva.rs  parameters.rs  solver.rs  state.rs
CpuSimulator/doc/modules/: markov.py
CpuSimulator/include/: Enums.hpp  OperativeSystem.hpp  ReserveStation.hpp  SimulationResult.hpp  SwapOut.hpp
CpuSimulator/src/: CPU.cpp  CPU.hpp  IOStation.cpp  IOStation.hpp  MvaSolver.cpp  OperativeSystem.cpp  OperativeSystem.hpp  ReserveStation.cpp  ReserveStation.hpp  Scenario.cpp  SimulationEnv.cpp  SimulationEnv.hpp  SimulationResult.cpp  SimulationResult.hpp  SwapIn.cpp  SwapIn.hpp  SwapOut.cpp  SwapOut.hpp  SystemParameters.hpp  main.cpp
CpuSimulator/test/: CMakeLists.txt  TestEnv.hpp  test_main.cpp
CpuSimulator/test/include/: MockStation.hpp
MachineRepairman/: CMakeLists.txt
MachineRepairman/include/: MachineRepairman.hpp  MachineRepairmanv2.hpp  RepairStation.hpp  Station.hpp  simulator.code-workspace
MachineRepairman/src/: MachineRepairman.cpp  MachineRepairmanv2.cpp  RepairStation.cpp  Station.cpp  main.cpp
Markov/: CMakeLists.txt
Markov/include/: CTMC.hpp  DTMC.hpp
Markov/src/: Bessel.cpp  CTMC.cpp  DTMC.cpp  main.cpp
NESLib/: CMakeLists.txt
NESLib/include/: Core.hpp  DataCollector.hpp  DataProvider.hpp  DataWriter.hpp  DelayStation.hpp  Event.hpp  EventHandler.hpp  FCFSStation.hpp  FormatParser.hpp  FunctionPointer.hpp  Generators.hpp  ISimulator.hpp  Lazy.hpp  LinkedList.hpp  LogEngine.hpp  Measure.hpp  MultiStreamDataProvider.hpp  Mva.hpp  RoundRobinStation.hpp  Scheduler.hpp  Station.hpp  Statistics.hpp  ToString.hpp  Usings.hpp  rngs.hpp
NESLib/include/Chains/: Bessel.hpp  DTMC.hpp
NESLib/include/Collections/: LinkedList.hpp  Matrix.hpp  Node.hpp
NESLib/include/Shell/: SimulationShell.hpp
NESLib/include/Strategies/: RegenerationPoint.hpp  TaggedCustomer.hpp  TransitionTimeAvoidance.hpp
NESLib/src/: Bessel.cpp  CTMC.cpp  Core.cpp  DTMC.cpp  DataCollector.cpp  DataProvider.cpp  DataWriter.cpp  DelayStation.cpp  Event.cpp  FCFSStation.cpp  Generators.cpp  LinkedList.cpp  LogEngine.cpp  Measure.cpp  Mva.cpp  RegenerationPoint.cpp  RegenrationPoint.cpp  RoundRobinStation.cpp  Scheduler.cpp  SimulationShell.cpp  Station.cpp  Statistics.cpp  TaggedCustomer.cpp  ToString.cpp  rngs.cpp  rvgs.cpp
NESLib/test/: TestEnv.hpp  testCollectors.cpp  testFormatters.cpp  testLinkedList.cpp  testMain.cpp  testMatrix.cpp  testRandom.cpp  testStations.cpp
SSQSimulator/: CMakeLists.txt
SSQSimulator/include/: NESssqv2.hpp  Options.hpp  ssq1.hpp
SSQSimulator/src/: NESssqv2.cpp  main.cpp  ssq1.cpp
SSQSimulator/test/: testSim.cpp
Scheduler/: CMakeLists.txt
Scheduler/doc/: .gitignore  Analysis.ipynb  Chain.md  Markov.ipynb  Report.tex  Results  introduction.md  report.md  requirements.txt  simulation.txt
Scheduler/doc/data/: Default.csv  Default_NOMPD.csv  LTCpu.csv  Markov.csv  Markov_20.csv  Markov_20_NegExp.csv  Markov_3.csv  NegExpCpu.csv  NegExpLt.csv  Simplified_N20.csv
Scheduler/doc/markov/: Cargo.toml
Scheduler/doc/markov/src/: generator.rs  main.rs  mva.rs  parameters.rs  solver.rs  state.rs  transition.rs
Scheduler/doc/modules/: markov.py  mva.py  networkxprinter.py  simulation.py
Scheduler/include/: CPU.hpp  DataViewer.hpp  Enums.hpp  IOStation.hpp  MvaSolver.hpp  OperativeSystem.hpp  Options.hpp  ReserveStation.hpp  SimulationEnv.hpp  SimulationResult.hpp  SwapIn.hpp  SwapOut.hpp  SystemParameters.hpp
Scheduler/src/: CPU.cpp  DataViewer.cpp  IOStation.cpp  MvaSolver.cpp  OperativeSystem.cpp  ReserveStation.cpp  Scenario.cpp  SimulationEnv.cpp  SimulationResult.cpp  SwapIn.cpp  SwapOut.cpp  main.cpp  mvaSolver.cpp
Scheduler/test/: test_cpu.cpp  test_main.cpp
cmake/: TestProjectGenerator.cmake
examples/: CMakeLists.txt
examples/CpuSimulator/: CMakeLists.txt
examples/CpuSimulator/doc/: Report.tex
examples/CpuSimulator/doc/data/: LTCpu.csv
examples/CpuSimulator/doc/modules/: simulation.py
examples/CpuSimulator/src/: IOStation.cpp  IOStation.hpp  ReserveStation.cpp  SimulationResult.cpp  SwapIn.cpp
examples/MachineRepairman/: CMakeLists.txt
examples/MachineRepairman/doc/: motivation.md
examples/MachineRepairman/src/: MachineRepairman.cpp  MachineRepairmanv2.cpp  RepairStation.cpp  main.cpp
examples/SSQSimulator/: CMakeLists.txt
examples/SSQSimulator/src/: NESssqv2.cpp  main.cpp
include/: DataProvider.hpp  NESssq.h  NESssq_List_Manager.h  NESssqv2.hpp
include/NES/: Event.hpp  LinkedList.hpp
src/: DataProvider.cpp  NESssq.cpp  NESssq_List_Manager.cpp  NESssqv2.cpp  main.cpp  ssq1_example.cpp
src/NES/: LinkedList.cpp
test/: testLinkedList.cpp
