project(Simulator)
cmake_minimum_required(VERSION 3.04)
find_package(Boost COMPONENTS container program_options CONFIG REQUIRED)
find_package(GTest REQUIRED CONFIG)
find_package(fmt REQUIRED CONFIG)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(NESLib)
add_subdirectory(SSQSimulator)
add_subdirectory(Markov)
add_subdirectory(MachineRepairman)
add_subdirectory(Scheduler)