cmake_minimum_required(VERSION 3.24)
project(Simulator C CXX)
find_package(GTest REQUIRED CONFIG)
find_package(fmt REQUIRED CONFIG)
find_package(argparse REQUIRED)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
add_subdirectory(NESLib)
add_subdirectory(SSQSimulator)
add_subdirectory(MachineRepairman)
add_subdirectory(Scheduler)